--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -299,8 +299,8 @@ img {
   top: 0;
 }
 /* Add shadow header */
-.shadow-header{
-  box-shadow: 0 1px 16px hsla(0,0%,0%,.12);
+.shadow-header {
+  box-shadow: 0 1px 16px hsla(0, 0%, 0%, 0.12);
 }
 /* Active link */
 
@@ -384,136 +384,219 @@ I .home__name {
   color: var(--title-color);
   margin-bottom: 1.5rem;
 }
-.home__description b{
-  background:
-  linear-gradient(90deg,
-hsla(14, 98%, 50%, .3),
-  hsla(14, 98%, 50%, 0));
-  }
-  .home__scroll{
+.home__description b {
+  background: linear-gradient(
+    90deg,
+    hsla(14, 98%, 50%, 0.3),
+    hsla(14, 98%, 50%, 0)
+  );
+}
+.home__scroll {
   display: block;
   width: max-content;
   margin: 0 auto;
-  }
-  .home__scroll-text{
+}
+.home__scroll-text {
   display: none;
-  }
-  .home__scroll-box{
-    background-color: var(--black-color);
-    color: var(--white-color);
-    width: 36px;
-    height: 36px;
-    display: grid;
-    place-items: center;
-    font-size: 1rem;
-    cursor: pointer;
-    overflow: hidden;
-    transition: background-color .4s;
-    }
+}
+.home__scroll-box {
+  background-color: var(--black-color);
+  color: var(--white-color);
+  width: 36px;
+  height: 36px;
+  display: grid;
+  place-items: center;
+  font-size: 1rem;
+  cursor: pointer;
+  overflow: hidden;
+  transition: background-color 0.4s;
+}
 /* Animate scroll icon */
-.home__scroll-box i{
+.home__scroll-box i {
   animation: scroll-down 3s infinite;
+}
+/* Animate scroll icon */
+@keyframes scroll-down {
+  0% {
+    transform: translateY(-1rem);
+    opacity: 0;
   }
-  /* Animate scroll icon */
-  @keyframes scroll-down{
-  0%{
-  transform: translateY(-1rem);
-  opacity: 0;
+  50% {
+    transform: translateY(0);
+    opacity: 1;
   }
-  50%{
-  transform: translateY(0);
-  opacity: 1;
+  100% {
+    transform: translateY(0.6rem);
+    opacity: 0;
   }
-  100%{
-  transform: translateY(.6rem);
-  opacity: 0;
-  }
-  }
+}
 /*=============== BUTTON ===============*/
-
+.button,
+.button__ghost {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 0.5rem;
+}
+.button {
+  background-color: var(--black-color);
+  padding: 1.1rem 1.5rem;
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+  transition: background-color 0.4s;
+}
+.button i {
+  font-size: 1.25rem;
+}
+.button:hover {
+  background-color: var(--first-color);
+}
+.button__ghost {
+  border: 3px solid var(--black-color);
+  color: var(--black-color);
+  padding: 0.5rem;
+  transition: border 0.4s, color 0.4s;
+}
+.button__ghost i {
+  font-size: 1.25rem;
+}
+.button__ghost:hover {
+  border: 3px solid var(--first-color);
+}
 /*=============== ABOUT ===============*/
-.about{
+.about {
   background-color: var(--container-color);
-  transition: background-color .4s;
-  }
-  .about__container{
+  transition: background-color 0.4s;
+}
+.about__container {
   row-gap: 0;
-  }
-  .about__perfil{
+}
+.about__perfil {
   position: relative;
   justify-self: center;
   margin-block: 2.5rem 4.5rem;
-  }
-  .about__image{
+}
+.about__image {
   width: 220px;
-  }
-  .about__img{
-   position: relative;
-   border: 4px solid var(--white-color);
-   z-index: 1;
-  }
-  .about__shadow,
+}
+.about__img {
+  position: relative;
+  border: 4px solid var(--white-color);
+  z-index: 1;
+}
+.about__shadow,
 .about__line,
-.about__box{
-position: absolute;
+.about__box {
+  position: absolute;
 }
-.about__shadow{
-width: 150px;
-height: 385px;
-background-color: var(--body-color);
-top: -2.5rem;
-right: -3.5rem;
-border-bottom: 4px solid var(--first-color);
-transition: background-color .4s;
+.about__shadow {
+  width: 150px;
+  height: 385px;
+  background-color: var(--body-color);
+  top: -2.5rem;
+  right: -3.5rem;
+  border-bottom: 4px solid var(--first-color);
+  transition: background-color 0.4s;
 }
-.about__perfil .geometric-box{
+.about__perfil .geometric-box {
   top: 1.5rem;
   right: -2.8rem;
-  }
-  .about__line{
+}
+.about__line {
   filter: invert(1);
   right: -1.25rem;
   top: 6rem;
   width: 50px;
-  transition: filter .4s;
-  }
-  .about__box{
+  transition: filter 0.4s;
+}
+.about__box {
   width: 40px;
   height: 40px;
   background-color: var(--first-color);
-  right: -.5rem;
-  bottom: 1.5rem
-  }
-  .about__description{
-    position: relative;
-    color: var(--title-color);
-    margin-bottom: 1.5rem;
-    }
-    .about__description::after{
-    content: '';
-    width: 20px;
-    height: 1px;
-    background-color: var(--title-color);
-    position: absolute;
-    left: -1.75rem;
-    top: .5rem;
-    }
-    .about__info{
-      padding-left: 1.25rem;
-    }
-    .about__list{
-      list-style: square;
-      color: var(--title-color);
-      margin-bottom: 3rem;
-      }
-      .about__buttons{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      column-gap: 1rem;
-      }
+  right: -0.5rem;
+  bottom: 1.5rem;
+}
+.about__description {
+  position: relative;
+  color: var(--title-color);
+  margin-bottom: 1.5rem;
+}
+.about__description::after {
+  content: "";
+  width: 20px;
+  height: 1px;
+  background-color: var(--title-color);
+  position: absolute;
+  left: -1.75rem;
+  top: 0.5rem;
+}
+.about__info {
+  padding-left: 1.25rem;
+}
+.about__list {
+  list-style: square;
+  color: var(--title-color);
+  margin-bottom: 3rem;
+}
+.about__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+}
 /*=============== SERVICES ===============*/
-
+.services__container {
+  grid-template-columns: 250px;
+  justify-content: center;
+  row-gap: 2rem;
+  padding-top: 1rem;
+}
+.services__card {
+  position: relative;
+}
+.services__content {
+  height: 100%;
+  background-color: var(--body-color);
+  border: 4px solid var(--black-color);
+  padding: 6rem 1rem 3rem;
+  z-index: 5;
+  position: relative;
+  transition: background-color 0.4s, border 0.4s;
+}
+.services__border {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 4px solid var(--first-color);
+  top: 0;
+  left: 0;
+  transition: transform 0.4s;
+}
+.services__card:hover .services__border {
+  transform: translate(0.75rem, 0.75rem);
+}
+.services__icon {
+  position: relative;
+  display: inline-block;
+}
+.services__icon i{
+  font-size: 2rem;
+  color: var(--black-color);
+  position: relative;
+  z-index: 5;
+  }
+  .services__box{
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background-color: var(--first-color);
+  right: -2px;
+  top: -2px;
+  }
+  .services__title{
+    font-size: var(--h2-font-size);
+    margin-bottom: 1.25rem;
+  }
 /*=============== PROJECTS ===============*/
 
 /*=============== CONTACT ===============*/
